# zuu

./: .gitignore  CMakeLists.txt  Cargo.toml  Installation.cpp  Installation.hpp  README.md  Unit.hpp  a.c  check.c  check.h  colors.h  darkness  docker-compose.yml  hgrc  install  installation.c  installation.h  oh.c  oh.h  perf.c  perf.h  pre-commit  run_zuu  unit.c  unit.h  yugi  yugi.c  yugi.h  zuu  zuu.cpp  zuu.desktop
.github/workflows/: continuous.yml  rust.yml
Generator/: Generator.cpp
Installation/: Installation.cpp  Installation.hpp
Unit/: Unit.cpp  Unit.hpp
hooks/d/: pre-commit
hooks/rust/: pre-commit
libs/generator/: generator.cpp  generator.hpp
libs/installation/: installation.cpp  installation.hpp
libs/unit/: unit.cpp  unit.hpp
libs/zuu/: zuu.cpp  zuu.hpp
man/: zuu.1
specs/: Installation_tests.cpp  Unit_tests.cpp  colors_tests.c  installation_tests.c  linux_readme_oh.c  perf_tests.c  unit_tests.c  unit_tests_oh.c
specs/install/: Installation_tests.cpp
specs/install/zuu/: zuu.cpp  zuu_install.cpp
specs/units/: Unit_tests.cpp  zuu_sure.cpp
specs/units/all/: Units.cpp  zuu_unit.cpp
specs/units/blocs/: zuu_shure.cpp  zuu_theory.cpp
src/: c.rs  d.rs  global.rs  go.rs  haskell.rs  java.rs  js.rs  main.rs  php.rs  python.rs  r.rs  ruby.rs  rust.rs  zuu.rs
