[package]
name = "zuu"
version = "7.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
keywords = ["code", "quality", "production", "certified","git"]
categories = ["development-tools","development-tools::testing"]
readme = "README.md"
authors = ["Willy Micieli"]
repository = "https://github.com/taishingi/zuu"
description = "A program to check your code quality before all commit"
